--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
     "require": {
         "php": "^7.0.8",
         "ext-iconv": "*",
+        "ramsey/uuid": "^3.7",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "^3.4",
         "symfony/console": "^3.4",
@@ -26,11 +27,11 @@
         "symfony/yaml": "^3.4"
     },
     "require-dev": {
+        "phpunit/phpunit": "^6.5",
         "symfony/browser-kit": "^3.4",
         "symfony/css-selector": "^3.4",
         "symfony/dotenv": "^3.4",
         "symfony/maker-bundle": "^1.0",
-        "symfony/phpunit-bridge": "^3.4",
         "symfony/profiler-pack": "*",
         "symfony/web-server-bundle": "^3.4"
     },
@@ -38,6 +39,7 @@
         "preferred-install": {
             "*": "dist"
         },
+        "bin-dir": "bin",
         "sort-packages": true
     },
     "autoload": {
