--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "symfony/yaml": "^3.4"
     },
     "require-dev": {
+        "humbug/humbug": "^1.0@RC",
         "phpunit/phpunit": "^6.5",
         "symfony/browser-kit": "^3.4",
         "symfony/css-selector": "^3.4",
